--- a/templates/controls/import_project_modal.html
+++ b/templates/controls/import_project_modal.html
@@ -10,12 +10,14 @@
                 {% csrf_token %}
                 <div class="modal-body">
                     {{ import_project_form.file }}
-                    <label for="{{ import_project_form.appsource_slug.id_auto }}">{{ import_project_form.appsource_slug.label }}:</label>
-                    {{ import_project_form.appsource_slug }}
-                    <label for="{{ import_project_form.appsource_type.id_auto }}">{{ import_project_form.appsource_type.label }}:</label>
-                    {{ import_project_form.appsource_type }}
-                    <label for="{{ import_project_form.appsource_path.id_auto }}">{{ import_project_form.appsource_path.label }}:</label>
-                    <div>{{ import_project_form.appsource_path }}</div>
+                    <label for="{{ import_project_form.appsource_compapp.id }}">{{ import_project_form.appsource_compapp.label }}:</label>
+                    {{ import_project_form.appsource_compapp }}
+{#                    <label for="{{ import_project_form.appsource_type.id_auto }}">{{ import_project_form.appsource_type.label }}:</label>#}
+{#                    {{ import_project_form.appsource_type }}#}
+{#                    <label for="{{ import_project_form.appsource_path.id_auto }}">{{ import_project_form.appsource_path.label }}:</label>#}
+{#                    <div>{{ import_project_form.appsource_path }}</div>#}
+                    <label for="{{ import_project_form.appsource_version_id.id }}">{{ import_project_form.appsource_version_id.label }}:</label>
+                    {{ import_project_form.appsource_version_id }}
                     <label for="{{ import_project_form.json_content.id_auto }}">{{ import_project_form.json_content.label }}:</label>
                     {{ import_project_form.json_content }}
 
