--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -275,7 +275,7 @@
                                                     <a role="button" data-toggle="collapse" data-parent="#accordion" class="btn btn-xs btn-default" href="#document-{{ forloop.counter }}-body" aria-expanded="false" aria-controls="document-{{ forloop.counter }}-body">Close</a>&nbsp;
                                                     <button type="button" name="delete" value="delete" class="btn btn-xs btn-danger" onclick="delete_smt('smt_{{ forloop.counter }}');return false;">Delete</button>
                                                     <button type="button" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_{{ forloop.counter }}');return false;">Save</button>
-                                                    <button type="button" name="revert" value="revert" class="btn btn-xs btn-primary" onclick="show_history_modal('{{ smt.id }}');return false;">Revert</button>
+                                                    <button type="button" name="history" value="history" class="btn btn-xs btn-primary" onclick="location.href='{% url 'statement_history' smt_id=smt.id %}'">History</button>
                                                 </div>
                                             </form>
                                         </div>
@@ -395,7 +395,6 @@
     </div>
 
     {{ block.super }}
-      {% include "controls/history-modal.html" %}
 {% endblock %}
 
 {% block scripts %}
