inching towards oscal json part sub-part format (e.g.  ac-1_smt.a.1)

--- a/templates/controls/statement_history.html
+++ b/templates/controls/statement_history.html
@@ -7,7 +7,7 @@
 {% block body %}
 
     <div class="container">
-        <h1 class="text-center"><u>Statement Version History for {{ statement.0.sid }}.{{ statement.0.pid }}</u></h1>
+        <h1 class="text-center"><u>Statement Version History for {{ statement.0.sid }}_smt.{{ statement.0.pid }}</u></h1>
         <h3 class="text-center"> (This statement comes from the {{ statement.0.producer_element.name }} component)</h3><br>
         <table class="table table-striped">
             <thead>
