--- a/templates/controls/statement_history.html
+++ b/templates/controls/statement_history.html
@@ -25,7 +25,7 @@
                         <td class="col-xs-1 col-sm-1 col-md-1">{{ smt_record.history_id }}</td>
                         <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_date }}</td>
                         <td>{{ smt_record.body }}</td>
-                        <td class="col-xs-2 col-sm-2 col-md-2">{% if forloop.first %} {#This is the current version#} {% else %}<a href="{% url 'restore_to' smt_id=smt_record.id history_id=smt_record.history_id %}" name="restore" class="btn btn-xs btn-primary">Restore to this version</a>{% endif %}</td>
+                        <td class="col-xs-2 col-sm-2 col-md-2">{% if not forloop.first %} <a href="{% url 'restore_to' smt_id=smt_record.id history_id=smt_record.history_id %}" name="restore" class="btn btn-xs btn-primary">Restore to this version</a>{% endif %}</td>
                     </tr>
                 {% endfor %}
              {% else %}
