--- a/templates/controls/statement_history.html
+++ b/templates/controls/statement_history.html
@@ -16,6 +16,8 @@
                 <th>Changed By</th>
                 <th>Date created</th>
                 <th>Statement body</th>
+                <th>Change Reason</th>
+                <th>Enter Reason</th>
                 <th>Action</th>
             </tr>
             </thead>
@@ -27,7 +29,12 @@
                         <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_user }}</td>
                         <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_date }}</td>
                         <td>{{ smt_record.body }}</td>
-                        <td class="col-xs-2 col-sm-2 col-md-2">{% if not forloop.first %} <a href="{% url 'restore_to' smt_id=smt_record.id history_id=smt_record.history_id %}" name="restore" class="btn btn-xs btn-primary">Restore to this version</a>{% endif %}</td>
+                        <td>{{ smt_record.history_change_reason }}</td>
+                    <form method="post" action = "{% url 'restore_to' smt_id=smt_record.id history_id=smt_record.history_id %}" id="import-form">
+                     {% csrf_token %}
+                        <td>{% if not forloop.first %}<input type="text" class="form-control" id="change_reason" placeholder="Enter your reason to here." onchange="change_reason_update('restore_{{ forloop.counter0 }}', this.value)">{% endif %}</td>
+                        <td class="col-xs-2 col-sm-2 col-md-2">{% if not forloop.first %} <button type="submit"  name="restore_{{ forloop.counter0 }}" id="restore_{{ forloop.counter0 }}" class="btn btn-xs btn-primary" value="hihi">Restore to this version</button>{% endif %}</td>
+                    </form>
                     </tr>
                 {% endfor %}
              {% else %}
@@ -37,4 +44,14 @@
             </tbody>
         </table>
     </div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+    function change_reason_update(restore_id, text_input) {
+        // update reason value with text input value
+    document.getElementById(restore_id).value = text_input;
+    }
+
+</script>}
 {% endblock %}
