--- a/templates/controls/statement_history.html
+++ b/templates/controls/statement_history.html
@@ -29,7 +29,7 @@
                         <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_user }}</td>
                         <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_date }}</td>
                         <td>{{ smt_record.body }}</td>
-                        <td>{{ smt_record.history_change_reason }}</td>
+                         <td class="col-xs-2 col-sm-2 col-md-2">{{ smt_record.history_change_reason }}</td>
                     <form method="post" action = "{% url 'restore_to' smt_id=smt_record.id history_id=smt_record.history_id %}" id="import-form">
                      {% csrf_token %}
                         <td>{% if not forloop.first %}<input type="text" class="form-control" id="change_reason" placeholder="Enter your reason to here." onchange="change_reason_update('restore_{{ forloop.counter0 }}', this.value)">{% endif %}</td>
