[WIP] Add deployments to systems
Add `controls.Deployment` model and routes
to support inventory of hosts, nodes, endpoints and
assessment results data thereof.

This commit focuses on the Deployments to represent
different environments/deployments related to systems.

--- a/templates/project.html
+++ b/templates/project.html
@@ -152,6 +152,9 @@ h3.question-group-title {
       <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/components/selected';">
         <em class="glyphicon glyphicon-tags"></em>&nbsp; Components</a>
       </button>
+      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/deployments';">
+        <em class="glyphicon glyphicon-th"></em>&nbsp; Inventory</a>
+      </button>
       <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/poams';">
         <em class="glyphicon glyphicon-check"></em>&nbsp; POA&Ms</a>
       </button>
