Add Deployment model, route, etc to track system inventory
Add controls.Deployment object, related routes, views, templates,
and admin to track system deployments and deployment inventory items.
Add DeploymentForm for Deployment model. Consolidate view for creating
and editing deployments into single view.

Add simple-history to Deployment records in order to maintain an inventory
history for each deployment.

One system has multiple deployments (e.g., dev, stage, prod).
Each deployment contains an inventory of the actual endpoints/items
in a deployment of the system.

The "design" deployment by convention is a special deployment to represent
the system architecture.

Populate every new system with default deployments design, dev, stage, prod.

Deployment.inventory_items are represented as JSON data object
following a scheme that is similar to OSCAL inventory-item section.
Data for deployment inventory-items is assumed to be generated outside of GovReady.
It is critical that the inventory items have UUIDs prior to import.
Inventory item UUIDs for the life of the instantiated inventory item.

Inventory items in an deployment can be associated with an inventory item
in the "design" deployment by referencing the "design" inventory item's UUID.
This enablea a virtual persistence of an inventory-item across different
instances of the "same" assest, such as a virtual database server.

An inventory is currently added to a deployment by copying and pasting
the JSON object representing the deployment.

TODO
- Check user has permission to view project to view/create deployments and view history
- Write tests
- API for pushing data and updating inventory
- Manual upload of inventory

--- a/templates/project.html
+++ b/templates/project.html
@@ -178,14 +178,14 @@ h3.question-group-title {
 {% block action_buttons %}
   <div class="btn-group" role="group" aria-label="action buttons group">
     {% if project.system is not None %}
-      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/controls/selected';">
-        <em class="glyphicon glyphicon-book"></em> Controls</a>
+      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/deployments';">
+        <em class="glyphicon glyphicon-th"></em>&nbsp; Deployments</a>
       </button>
       <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/components/selected';">
         <em class="glyphicon glyphicon-tags"></em>&nbsp; Components</a>
       </button>
-      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/deployments';">
-        <em class="glyphicon glyphicon-th"></em>&nbsp; Inventory</a>
+      <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/controls/selected';">
+        <em class="glyphicon glyphicon-book"></em> Controls</a>
       </button>
       <button class="btn btn-sm btn-default" onclick="window.location = '/systems/{{project.system.id}}/poams';">
         <em class="glyphicon glyphicon-check"></em>&nbsp; POA&Ms</a>
@@ -317,7 +317,7 @@ h3.question-group-title {
 
     <div class="row">
       <div class="col-md-12">
-        <span class="last-login">Last login: {{request.user.last_login}}</span>
+        <span class="last-login">Last visit: {{request.user.last_login}}</span>
         <h2 class="status-welcome">Welcome back, {{request.user}}</h2>
       </div>
     </div>
