--- a/templates/systems/deployment_inventory.html
+++ b/templates/systems/deployment_inventory.html
@@ -47,7 +47,7 @@
     {% if inventory_items|length < 1 %}
       <div id="tab-content" class="row row-control">
         <div id="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <p>No Inventory-items are currently identified for this deployment.</p>
+          <p>No inventory items are currently identified for this deployment.</p>
         </div>
       </div>
     {% else %}
