--- a/templates/portfolios/index.html
+++ b/templates/portfolios/index.html
@@ -29,4 +29,7 @@ Your Compliance Portfolios
 
     {% include "portfolios/portfolios_table.html" with portfolios=portfolios %}
 
+  </div>
+</div>
+
     {% endblock %}
