--- a/templates/task-finished.html
+++ b/templates/task-finished.html
@@ -21,12 +21,7 @@
     font-weight: bold;
   }
 
-  thead tr {
-    border:1px solid black;
-    background-color: rgb(80, 170, 67);
-    color: #fff;
-    font-weight: bold;
-  }
+/* removed thead tr */
 
 </style>
 {% endblock %}
