--- a/templates/base.html
+++ b/templates/base.html
@@ -79,9 +79,9 @@
             <div class="col-sm-12">
               <div class="row footer-row">
                 <div class="col-xs-3">&copy; GovReady PBC {% now "Y" %}</div>
-                <div class="col-xs-2 center-text"><a href="/privacy">Privacy Policy</a></div>
-                <div class="col-xs-2 center-text"><a href="/terms-of-service">Terms of Service</a></div>
-                <div class="col-xs-2 center-text" ><a href="/support">Support</a></div>
+                <div class="col-xs-2 center-text"><a href={% url 'privacy_terms_love' 'privacy' %}>Privacy Policy</a></div>
+                <div class="col-xs-2 center-text"><a href={% url 'privacy_terms_love' 'terms-of-service' %}>Terms of Service</a></div>
+                <div class="col-xs-2 center-text" ><a href={% url 'privacy_terms_love' 'love-assessments' %}>Support</a></div>
                 <div class="col-xs-3 right-text">{{APP_VERSION_STRING}}</div>
             </div>
           </div>
