--- a/templates/projects.html
+++ b/templates/projects.html
@@ -188,7 +188,7 @@ Your Compliance Projects
           <div class="glyphicon glyphicon glyphicon-folder-open"></div>
         </div>
         <div class="col-md-9">
-          <h3><a href="/portfolios/new">Create a Portfolio</a></h3>
+          <h3><a href={% url 'new_portfolio' %}>Create a Portfolio</a></h3>
           <p>Portfolios are a way to organize and manage related projects.
           </p>
         </div>
